--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
- background-color: beige; 
+body{
+ background-color: #424B54; 
 }
 
 h3{
@@ -9,7 +9,32 @@ h3{
   text-shadow: 1px 12px 10px;
   letter-spacing: 10px;
   font-style: oblique;
+  
 }
 img{
   width: 100px;
+}
+
+ul{
+  list-style-type: none;
+  background-color: #93A8AC;
+  width: 100%;
+  position: fixed;
+  padding: 10px;
+  margin: 0;
+}
+li{
+  display: inline;
+  padding: 10px;
+}
+
+a{
+ text-decoration: none;
+  color: #547AA5;
+    font-variant: small-caps;
+}
+
+li a:hover {
+  background-color: #191102;
+  padding: 20px;
 }
